force-app/main/default/objects/Opportunity/fields/Declared_TEU__c.field-meta.xml
<CustomField>
    <fullName>Declared_TEU__c</fullName>
    <description>Sum of declared TEUs on related bookings</description>
    <label>Declared TEU</label>
    <summarizedField>Schedule_booking__c.Declared_Teu__c</summarizedField>
    <summaryForeignKey>Schedule_booking__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>