force-app/main/default/objects/Opportunity/fields/Region_recalculation_disabled__c.field-meta.xml
<CustomField>
    <fullName>Region_recalculation_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Region recalculation disabled</label>
    <type>Checkbox</type>
</CustomField>