force-app/main/default/objects/Opportunity/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunity_schedule</relationshipName>
    <type>Lookup</type>
</CustomField>